--- a/Day 6-10.ipynb
+++ b/Day 6-10.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,6 +568,93 @@
     "    ns = [int(l) for l in f]\n",
     "    print('Part 1: ', first_invalid_number(ns))\n",
     "    print('Part 2: ', encryption_weakness(ns))"
+   ]
+  },
+  {
+   "source": [
+    "# Day 10: Adapter Array"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def joltage_chain_differences(adapters):\n",
+    "    \"\"\"\n",
+    "    >>> joltage_chain_differences([16, 10, 15, 5, 1, 11, 7, 19, 6, 12, 4])\n",
+    "    {1: 7, 2: 0, 3: 5}\n",
+    "    >>> joltage_chain_differences([28, 33, 18, 42, 31, 14, 46, 20, 48, 47,\n",
+    "    ...     24, 23, 49, 45, 19, 38, 39, 11, 1, 32, 25, 35, 8, 17, 7, 9, 4,\n",
+    "    ...     2, 34, 10, 3])\n",
+    "    {1: 22, 2: 0, 3: 10}\n",
+    "    \"\"\"\n",
+    "    adapters = [0] + list(sorted(adapters)) + [max(adapters) + 3]\n",
+    "    differences = {1: 0, 2: 0, 3: 0}\n",
+    "    for i, j in zip(adapters, adapters[1:]):\n",
+    "        differences[j-i] += 1\n",
+    "    return differences\n",
+    "\n",
+    "def num_arrangements(adapters):\n",
+    "    \"\"\"\n",
+    "    >>> num_arrangements([16, 10, 15, 5, 1, 11, 7, 19, 6, 12, 4])\n",
+    "    8\n",
+    "    >>> num_arrangements([28, 33, 18, 42, 31, 14, 46, 20, 48, 47,\n",
+    "    ...     24, 23, 49, 45, 19, 38, 39, 11, 1, 32, 25, 35, 8, 17,\n",
+    "    ...     7, 9, 4, 2, 34, 10, 3])\n",
+    "    19208\n",
+    "    \"\"\"\n",
+    "    solutions = defaultdict(int, {0: 1})\n",
+    "    adapters.sort()\n",
+    "    for jolts_i in adapters:\n",
+    "        for jolts_j in range(jolts_i - 3, jolts_i):\n",
+    "            solutions[jolts_i] += solutions[jolts_j]\n",
+    "    return solutions[max(adapters)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Finding tests in NoName\nTrying:\n    joltage_chain_differences([16, 10, 15, 5, 1, 11, 7, 19, 6, 12, 4])\nExpecting:\n    {1: 7, 2: 0, 3: 5}\nok\nTrying:\n    joltage_chain_differences([28, 33, 18, 42, 31, 14, 46, 20, 48, 47,\n        24, 23, 49, 45, 19, 38, 39, 11, 1, 32, 25, 35, 8, 17, 7, 9, 4,\n        2, 34, 10, 3])\nExpecting:\n    {1: 22, 2: 0, 3: 10}\nok\nFinding tests in NoName\nTrying:\n    num_arrangements([16, 10, 15, 5, 1, 11, 7, 19, 6, 12, 4])\nExpecting:\n    8\nok\nTrying:\n    num_arrangements([28, 33, 18, 42, 31, 14, 46, 20, 48, 47,\n        24, 23, 49, 45, 19, 38, 39, 11, 1, 32, 25, 35, 8, 17,\n        7, 9, 4, 2, 34, 10, 3])\nExpecting:\n    19208\nok\n"
+     ]
+    }
+   ],
+   "source": [
+    "doctest.run_docstring_examples(joltage_chain_differences, globs=None, verbose=True)\n",
+    "doctest.run_docstring_examples(num_arrangements, globs=None, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Part 1:  2484\nPart 2:  15790581481472\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Final answers\n",
+    "with open('day10.txt') as f:\n",
+    "    adapters = [int(l.strip()) for l in f]\n",
+    "    differences = joltage_chain_differences(adapters)\n",
+    "    print('Part 1: ', differences[1] * differences[3])\n",
+    "    print('Part 2: ', num_arrangements(adapters))"
    ]
   }
  ]
