--- a/Day 11 - 15.ipynb
+++ b/Day 11 - 15.ipynb
@@ -10,12 +10,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3-final"
+   "version": "3.8.3-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3"
+   "display_name": "Python 3.8.3 64-bit ('aoc': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "91ecdc0959f669be397eefd8d918e676da99a58414a8579254f71bfed9ab338a"
+    }
+   }
   }
  },
  "nbformat": 4,
@@ -30,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +45,7 @@
     "import doctest\n",
     "import functools\n",
     "import itertools\n",
+    "from itertools import count\n",
     "import math\n",
     "import re\n",
     "from copy import deepcopy"
@@ -54,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,16 +124,12 @@
     "        for dx in (-1, 0, 1):\n",
     "            for dy in (-1, 0, 1):\n",
     "                if dx == 0 and dy == 0: continue\n",
-    "                xp = x + dx\n",
-    "                yp = y + dy\n",
-    "                while self.within_grid(xp, yp):\n",
-    "                    cell = self.at(xp, yp)\n",
-    "                    if cell != '.':\n",
+    "                for xp, yp in zip(count(x+dx, dx), count(y+dy, dy)):\n",
+    "                    if not self.within_grid(xp, yp):\n",
+    "                        break\n",
+    "                    if (cell := self.at(xp, yp)) != '.':\n",
     "                        yield cell\n",
     "                        break\n",
-    "                    else:\n",
-    "                        xp += dx\n",
-    "                        yp += dy\n",
     "\n",
     "def simulate_until_equilibrium(layout):\n",
     "    while layout.update():\n",
@@ -137,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
