--- a/Day 11 - 15.ipynb
+++ b/Day 11 - 15.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,13 +336,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -363,70 +356,188 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Day 13: Shuttle Search"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 188,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "0 0 0 F 10 -> 10 0 0\n10 0 0 N 3 -> 10 3 0\n10 3 0 F 7 -> 17 3 0\n17 3 0 R 90 -> 17 3 270\n17 3 270 F 11 -> 17 -8 270\n"
-     ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "(17, -8)"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 92
-    }
-   ],
+   "outputs": [],
    "source": [
-    "move('''F10\r\n",
-    "N3\r\n",
-    "F7\r\n",
-    "R90\r\n",
-    "F11''')"
+    "def parse_schedule(text):\n",
+    "    \"\"\"\n",
+    "    >>> parse_schedule('123\\\\nx,x,1,2,100,x')\n",
+    "    (123, ['x', 'x', 1, 2, 100, 'x'])\n",
+    "    \"\"\"\n",
+    "    departure_ts, bus_ids = text.strip().split()\n",
+    "    departure_ts = int(departure_ts)\n",
+    "    bus_ids = [bus_id if is_wildcard(bus_id) else int(bus_id) for bus_id in bus_ids.split(',')]\n",
+    "    return departure_ts, bus_ids\n",
+    "\n",
+    "def is_wildcard(bus_id):\n",
+    "    return bus_id == 'x'\n",
+    "\n",
+    "def best_bus(ts, bus_ids):\n",
+    "    \"\"\"\n",
+    "    >>> best_bus(939, [7, 13, 59, 'x', 31, 19])\n",
+    "    (59, 5)\n",
+    "    >>> best_bus(939, [7, 13, 59, 31, 19, 939])\n",
+    "    (939, 0)\n",
+    "    \"\"\"\n",
+    "    bus_ids = [bus_id for bus_id in bus_ids if not is_wildcard(bus_id)]\n",
+    "    wait_time = lambda bus_id: (bus_id - (ts % bus_id)) % ts\n",
+    "    bus_id = min(bus_ids, key=wait_time)\n",
+    "    return bus_id, wait_time(bus_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 183,
+   "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0 0 0 F 77 -> 77 0 0\n77 0 0 E 4 -> 81 0 0\n81 0 0 S 2 -> 81 -2 0\n81 -2 0 W 1 -> 80 -2 0\n80 -2 0 L 180 -> 80 -2 90\n80 -2 90 N 4 -> 80 2 90\n80 2 90 R 180 -> 80 2 0\n80 2 0 S 3 -> 80 -1 0\n80 -1 0 W 5 -> 75 -1 0\n75 -1 0 F 86 -> 161 -1 0\n161 -1 0 L 90 -> 161 -1 90\n161 -1 90 E 1 -> 162 -1 90\n162 -1 90 F 16 -> 162 15 90\n162 15 90 R 90 -> 162 15 0\n162 15 0 N 1 -> 162 16 0\n162 16 0 E 1 -> 163 16 0\n163 16 0 F 86 -> 249 16 0\n249 16 0 S 1 -> 249 15 0\n249 15 0 F 36 -> 285 15 0\n285 15 0 E 2 -> 287 15 0\n287 15 0 L 180 -> 287 15 90\n287 15 90 N 5 -> 287 20 90\n287 20 90 F 46 -> 287 66 90\n287 66 90 N 1 -> 287 67 90\n287 67 90 L 90 -> 287 67 180\n287 67 180 F 43 -> 244 67 180\n244 67 180 S 5 -> 244 62 180\n244 62 180 R 90 -> 244 62 90\n244 62 90 F 41 -> 244 103 90\n244 103 90 W 5 -> 239 103 90\n239 103 90 N 1 -> 239 104 90\n239 104 90 F 65 -> 239 169 90\n239 169 90 E 4 -> 243 169 90\n243 169 90 N 1 -> 243 170 90\n243 170 90 W 3 -> 240 170 90\n240 170 90 F 92 -> 240 262 90\n240 262 90 N 5 -> 240 267 90\n240 267 90 F 33 -> 240 300 90\n240 300 90 R 90 -> 240 300 0\n240 300 0 S 5 -> 240 295 0\n240 295 0 L 90 -> 240 295 90\n240 295 90 W 1 -> 239 295 90\n239 295 90 R 180 -> 239 295 0\n239 295 0 L 90 -> 239 295 90\n239 295 90 S 5 -> 239 290 90\n239 290 90 F 27 -> 239 317 90\n239 317 90 R 90 -> 239 317 0\n239 317 0 N 4 -> 239 321 0\n239 321 0 R 90 -> 239 321 270\n239 321 270 F 43 -> 239 278 270\n239 278 270 E 5 -> 244 278 270\n244 278 270 S 2 -> 244 276 270\n244 276 270 F 68 -> 244 208 270\n244 208 270 N 5 -> 244 213 270\n244 213 270 R 90 -> 244 213 180\n244 213 180 F 68 -> 176 213 180\n176 213 180 R 180 -> 176 213 90\n176 213 90 S 2 -> 176 211 90\n176 211 90 E 2 -> 178 211 90\n178 211 90 S 3 -> 178 208 90\n178 208 90 F 41 -> 178 249 90\n178 249 90 L 180 -> 178 249 180\n178 249 180 E 3 -> 181 249 180\n181 249 180 R 90 -> 181 249 90\n181 249 90 F 73 -> 181 322 90\n181 322 90 R 90 -> 181 322 0\n181 322 0 N 1 -> 181 323 0\n181 323 0 L 180 -> 181 323 90\n181 323 90 N 3 -> 181 326 90\n181 326 90 L 180 -> 181 326 180\n181 326 180 W 3 -> 178 326 180\n178 326 180 S 1 -> 178 325 180\n178 325 180 R 180 -> 178 325 90\n178 325 90 N 3 -> 178 328 90\n178 328 90 F 26 -> 178 354 90\n178 354 90 N 5 -> 178 359 90\n178 359 90 F 27 -> 178 386 90\n178 386 90 L 90 -> 178 386 180\n178 386 180 F 30 -> 148 386 180\n148 386 180 R 180 -> 148 386 90\n148 386 90 N 4 -> 148 390 90\n148 390 90 R 90 -> 148 390 0\n148 390 0 E 5 -> 153 390 0\n153 390 0 N 1 -> 153 391 0\n153 391 0 F 70 -> 223 391 0\n223 391 0 E 1 -> 224 391 0\n224 391 0 L 90 -> 224 391 90\n224 391 90 N 3 -> 224 394 90\n224 394 90 F 100 -> 224 494 90\n224 494 90 L 90 -> 224 494 180\n224 494 180 E 5 -> 229 494 180\n229 494 180 L 90 -> 229 494 270\n229 494 270 S 2 -> 229 492 270\n229 492 270 F 85 -> 229 407 270\n229 407 270 W 5 -> 224 407 270\n224 407 270 R 90 -> 224 407 180\n224 407 180 F 85 -> 139 407 180\n139 407 180 E 3 -> 142 407 180\n142 407 180 R 90 -> 142 407 90\n142 407 90 E 5 -> 147 407 90\n"
+      "Finding tests in NoName\nTrying:\n    parse_schedule('123\\nx,x,1,2,100,x')\nExpecting:\n    (123, ['x', 'x', 1, 2, 100, 'x'])\nok\nFinding tests in NoName\nTrying:\n    best_bus(939, [7, 13, 59, 'x', 31, 19])\nExpecting:\n    (59, 5)\nok\nTrying:\n    best_bus(939, [7, 13, 59, 31, 19, 939])\nExpecting:\n    (939, 0)\nok\n"
      ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "(147, 407)"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 94
     }
    ],
    "source": [
-    "move('\\n'.join(actions.split()[:100]))"
+    "doctest.run_docstring_examples(parse_schedule, globs=None, verbose=True)\n",
+    "doctest.run_docstring_examples(best_bus, globs=None, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Abandoned: too slow!\n",
+    "def divides(m, n):\n",
+    "    return n % m == 0\n",
+    "\n",
+    "def make_factors(bus_ids):\n",
+    "    return {bus_id: i \n",
+    "            for i, bus_id in enumerate(bus_ids) if not is_wildcard(bus_id)}\n",
+    "\n",
+    "def is_solution(ts, factors, base_delta=0):\n",
+    "    return all(divides(f, ts + delta - base_delta) for f, delta in factors.items())\n",
+    "\n",
+    "def earliest_timestamp(bus_ids, start=None):\n",
+    "    \"\"\"\n",
+    "    >>> earliest_timestamp([7, 13, 'x', 'x', 59, 'x', 31, 19])\n",
+    "    1068781\n",
+    "    \"\"\"\n",
+    "    factors = make_factors(bus_ids)\n",
+    "    max_ts = max(factors.keys())\n",
+    "    base_delta = factors[max_ts]\n",
+    "    guess = ((start // max_ts) + 1) * max_ts if start else max_ts\n",
+    "    while True:\n",
+    "        if is_solution(guess, factors, base_delta):\n",
+    "            return guess - base_delta\n",
+    "        guess += max_ts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Finding tests in NoName\nTrying:\n    earliest_timestamp([7, 13, 'x', 'x', 59, 'x', 31, 19])\nExpecting:\n    1068781\nok\n"
+     ]
+    }
+   ],
+   "source": [
+    "doctest.run_docstring_examples(earliest_timestamp, globs=None, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass\n",
+    "class Solution:\n",
+    "    phase: int\n",
+    "    period: int\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def create(n, delta):\n",
+    "        return Solution((n - delta) % n, n)\n",
+    "\n",
+    "def sync(s1, s2):\n",
+    "    \"\"\"\n",
+    "    >>> sync(Solution.create(17, 0), Solution.create(1, 0))\n",
+    "    Solution(phase=0, period=17)\n",
+    "    >>> sync(sync(Solution.create(7, 0), Solution.create(13, 1)), Solution.create(59, 4)).phase\n",
+    "    350\n",
+    "    \"\"\"\n",
+    "    # Only works if periods are prime numbers, I guess...\n",
+    "    hi = s1.period * s2.period\n",
+    "    for i in itertools.chain(range(s1.phase, hi, s1.period), range(s2.phase, hi, s2.period)):\n",
+    "        if (i % s1.period) == s1.phase and (i % s2.period) == s2.phase:\n",
+    "            return Solution(i, s1.period * s2.period)\n",
+    "\n",
+    "def sync_all(bus_ids):\n",
+    "    \"\"\"\n",
+    "    >>> sync_all([7, 13, 'x', 'x', 59, 'x', 31, 19])\n",
+    "    Solution(phase=1068781, period=3162341)\n",
+    "    \"\"\"\n",
+    "    partials = [Solution.create(bus_id, i)\n",
+    "                for i, bus_id in enumerate(bus_ids) if not is_wildcard(bus_id)]\n",
+    "    return functools.reduce(sync, partials, Solution.create(1, 0))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Finding tests in NoName\nTrying:\n    sync(Solution.create(17, 0), Solution.create(1, 0))\nExpecting:\n    Solution(phase=0, period=17)\nok\nTrying:\n    sync(sync(Solution.create(7, 0), Solution.create(13, 1)), Solution.create(59, 4)).phase\nExpecting:\n    350\nok\nFinding tests in NoName\nTrying:\n    sync_all([7, 13, 'x', 'x', 59, 'x', 31, 19])\nExpecting:\n    Solution(phase=1068781, period=3162341)\nok\n"
+     ]
+    }
+   ],
+   "source": [
+    "doctest.run_docstring_examples(sync, globs=None, verbose=True)\n",
+    "doctest.run_docstring_examples(sync_all, globs=None, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Part 1:  370\nPart 2:  894954360381385\nWall time: 2 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Final answers\n",
+    "with open('day13.txt') as f:\n",
+    "    ts, bus_ids = parse_schedule(f.read())\n",
+    "    bus_id, wait_time = best_bus(ts, bus_ids)\n",
+    "    print('Part 1: ', bus_id * wait_time)\n",
+    "    print('Part 2: ', sync_all(bus_ids).phase)"
    ]
   },
   {
