--- a/Day 11 - 15.ipynb
+++ b/Day 11 - 15.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,11 +541,180 @@
    ]
   },
   {
+   "source": [
+    "# Day 14: Docking Data"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def to_binary(x, width=36):\n",
+    "    \"\"\"\n",
+    "    >>> to_binary(12, 4)\n",
+    "    '1100'\n",
+    "    >>> to_binary(12, 6)\n",
+    "    '001100'\n",
+    "    \"\"\"\n",
+    "    return f'{x:0{width}b}'\n",
+    "\n",
+    "def to_decimal(mask):\n",
+    "    return int(mask, 2)\n",
+    "\n",
+    "def apply_mask(x, mask):\n",
+    "    \"\"\"\n",
+    "    >>> apply_mask(11, 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXX1XXXX0X')\n",
+    "    73\n",
+    "    >>> apply_mask(101, 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXX1XXXX0X')\n",
+    "    101\n",
+    "    >>> apply_mask(0, 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXX1XXXX0X')\n",
+    "    64\n",
+    "    \"\"\"\n",
+    "    # Apply 1s.\n",
+    "    x |= to_decimal(mask.replace('X', '0'))\n",
+    "    # Apply 0s.\n",
+    "    x &= to_decimal(mask.replace('X', '1'))\n",
+    "    return x\n",
+    "\n",
+    "def expand_mask(mask):\n",
+    "    \"\"\"\n",
+    "    >>> list(expand_mask('11001'))\n",
+    "    ['11001']\n",
+    "    >>> list(expand_mask('X0X1'))\n",
+    "    ['0001', '0011', '1001', '1011']\n",
+    "    \"\"\"\n",
+    "    wildcards = mask.count('X')\n",
+    "    for sample in range(2**wildcards):\n",
+    "        exp = mask\n",
+    "        for bit in to_binary(sample, wildcards):\n",
+    "            exp = exp.replace('X', bit, 1)\n",
+    "        yield exp\n",
+    "\n",
+    "\n",
+    "def expand_addr(addr, mask):\n",
+    "    \"\"\"\n",
+    "    >>> list(expand_addr(42, '000000000000000000000000000000X1001X'))\n",
+    "    [26, 27, 58, 59]\n",
+    "    \"\"\"\n",
+    "    masked_addr = ''.join(m if m in ('1', 'X') else a \n",
+    "                          for a, m in zip(to_binary(addr), mask))\n",
+    "    for exp in expand_mask(masked_addr):\n",
+    "        yield to_decimal(exp)\n",
+    "\n",
+    "def parse_program(program):\n",
+    "    for line in program:\n",
+    "        lhs, rhs = line.strip().split(' = ')\n",
+    "        if lhs == 'mask':\n",
+    "            yield lhs, rhs\n",
+    "        else:\n",
+    "            addr = int(lhs[lhs.index('[')+1:-1])\n",
+    "            val = int(rhs)\n",
+    "            yield lhs, (addr, val)\n",
+    "        \n",
+    "\n",
+    "def run_program(program):\n",
+    "    \"\"\"\n",
+    "    >>> program = ['mask = XXXXXXXXXXXXXXXXXXXXXXXXXXXXX1XXXX0X',\n",
+    "    ...            'mem[8] = 11', 'mem[7] = 101', 'mem[8] = 0']\n",
+    "    >>> run_program(program)\n",
+    "    165\n",
+    "    \"\"\"\n",
+    "    mask = None\n",
+    "    mem = {}\n",
+    "    for opcode, operands in parse_program(program):\n",
+    "        if opcode == 'mask':\n",
+    "            mask = operands\n",
+    "        else:\n",
+    "            addr, val = operands\n",
+    "            mem[addr] = apply_mask(val, mask)\n",
+    "    return sum(mem.values())\n",
+    "\n",
+    "def run_program_v2(program):\n",
+    "    \"\"\"\n",
+    "    >>> program = ['mask = XXXXXXXXXXXXXXXXXXXXXXXXXXXXX1XXXX0X',\n",
+    "    ...            'mem[8] = 11', 'mem[7] = 101', 'mem[8] = 0']\n",
+    "    >>> run_program_v2(program)\n",
+    "    208\n",
+    "    \"\"\"\n",
+    "    mask = None\n",
+    "    mem = {}\n",
+    "    for opcode, operands in parse_program(program):\n",
+    "        if opcode == 'mask':\n",
+    "            mask = operands\n",
+    "        else:\n",
+    "            addr, val = operands\n",
+    "            for addr in expand_addr(addr, mask):\n",
+    "                mem[addr] = val\n",
+    "    return sum(mem.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Finding tests in NoName\nTrying:\n    to_binary(12, 4)\nExpecting:\n    '1100'\nok\nTrying:\n    to_binary(12, 6)\nExpecting:\n    '001100'\nok\nFinding tests in NoName\nTrying:\n    apply_mask(11, 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXX1XXXX0X')\nExpecting:\n    73\nok\nTrying:\n    apply_mask(101, 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXX1XXXX0X')\nExpecting:\n    101\nok\nTrying:\n    apply_mask(0, 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXX1XXXX0X')\nExpecting:\n    64\nok\nFinding tests in NoName\nTrying:\n    list(expand_mask('11001'))\nExpecting:\n    ['11001']\nok\nTrying:\n    list(expand_mask('X0X1'))\nExpecting:\n    ['0001', '0011', '1001', '1011']\nok\nFinding tests in NoName\nTrying:\n    list(expand_addr(42, '000000000000000000000000000000X1001X'))\nExpecting:\n    [26, 27, 58, 59]\nok\nFinding tests in NoName\nTrying:\n    program = ['mask = XXXXXXXXXXXXXXXXXXXXXXXXXXXXX1XXXX0X',\n               'mem[8] = 11', 'mem[7] = 101', 'mem[8] = 0']\nExpecting nothing\nok\nTrying:\n    run_program(program)\nExpecting:\n    165\nok\nFinding tests in NoName\nTrying:\n    program = ['mask = XXXXXXXXXXXXXXXXXXXXXXXXXXXXX1XXXX0X',\n               'mem[8] = 11', 'mem[7] = 101', 'mem[8] = 0']\nExpecting nothing\nok\nTrying:\n    run_program_v2(program)\nExpecting:\n    208\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-72-98d7ca16af33>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mdoctest\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_docstring_examples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexpand_addr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mglobs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mdoctest\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_docstring_examples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrun_program\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mglobs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mdoctest\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_docstring_examples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrun_program_v2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mglobs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mD:\\Anaconda\\envs\\aoc\\lib\\doctest.py\u001b[0m in \u001b[0;36mrun_docstring_examples\u001b[1;34m(f, globs, verbose, name, compileflags, optionflags)\u001b[0m\n\u001b[0;32m   2110\u001b[0m     \u001b[0mrunner\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDocTestRunner\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mverbose\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moptionflags\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0moptionflags\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2111\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mtest\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfinder\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mglobs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mglobs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2112\u001b[1;33m         \u001b[0mrunner\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcompileflags\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcompileflags\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2113\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2114\u001b[0m \u001b[1;31m######################################################################\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Anaconda\\envs\\aoc\\lib\\doctest.py\u001b[0m in \u001b[0;36mrun\u001b[1;34m(self, test, compileflags, out, clear_globs)\u001b[0m\n\u001b[0;32m   1481\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1482\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1483\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__run\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcompileflags\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mout\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1484\u001b[0m         \u001b[1;32mfinally\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1485\u001b[0m             \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstdout\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msave_stdout\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Anaconda\\envs\\aoc\\lib\\doctest.py\u001b[0m in \u001b[0;36m__run\u001b[1;34m(self, test, compileflags, out)\u001b[0m\n\u001b[0;32m   1334\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1335\u001b[0m                 \u001b[1;31m# Don't blink!  This is where the user's code gets run.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1336\u001b[1;33m                 exec(compile(example.source, filename, \"single\",\n\u001b[0m\u001b[0;32m   1337\u001b[0m                              compileflags, 1), test.globs)\n\u001b[0;32m   1338\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdebugger\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_continue\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# ==== Example Finished ====\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<doctest NoName[1]>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-69-5825af93da1e>\u001b[0m in \u001b[0;36mrun_program_v2\u001b[1;34m(program)\u001b[0m\n\u001b[0;32m     93\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     94\u001b[0m             \u001b[0maddr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mval\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0moperands\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 95\u001b[1;33m             \u001b[1;32mfor\u001b[0m \u001b[0maddr\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mexpand_addr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maddr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmask\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     96\u001b[0m                 \u001b[0mmem\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0maddr\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mval\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     97\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmem\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-69-5825af93da1e>\u001b[0m in \u001b[0;36mexpand_addr\u001b[1;34m(addr, mask)\u001b[0m\n\u001b[0;32m     48\u001b[0m     masked_addr = ''.join(m if m in ('1', 'X') else a \n\u001b[0;32m     49\u001b[0m                           for a, m in zip(to_binary(addr), mask))\n\u001b[1;32m---> 50\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mexp\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mexpand_mask\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmasked_addr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     51\u001b[0m         \u001b[1;32myield\u001b[0m \u001b[0mto_decimal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     52\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-69-5825af93da1e>\u001b[0m in \u001b[0;36mexpand_mask\u001b[1;34m(mask)\u001b[0m\n\u001b[0;32m     37\u001b[0m         \u001b[0mexp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmask\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mbit\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mto_binary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwildcards\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 39\u001b[1;33m             \u001b[0mexp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mexp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'X'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbit\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     40\u001b[0m         \u001b[1;32myield\u001b[0m \u001b[0mexp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "doctest.run_docstring_examples(to_binary, globs=None, verbose=True)\n",
+    "doctest.run_docstring_examples(apply_mask, globs=None, verbose=True)\n",
+    "doctest.run_docstring_examples(expand_mask, globs=None, verbose=True)\n",
+    "doctest.run_docstring_examples(expand_addr, globs=None, verbose=True)\n",
+    "doctest.run_docstring_examples(run_program, globs=None, verbose=True)\n",
+    "doctest.run_docstring_examples(run_program_v2, globs=None, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Part 1:  14553106347726\n",
+      "Part 2:  2737766154126\n",
+      "Wall time: 239 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Final answers\n",
+    "with open('day14.txt') as f:\n",
+    "    program = f.readlines()\n",
+    "    print('Part 1: ', run_program(program))\n",
+    "    print('Part 2: ', run_program_v2(program))"
+   ]
   }
  ]
 }
